# LearningPython

./: .gitignore  README.md  requirements.txt
Modules/LearningExamples/: app.py  args_kwargs.py  basic_translator.py  calculator.py  chef.py  chinese_chef.py  choose_your_own_adventure.py  class_attributes.py  classes_objects.py  comprehensions.py  dictionaries.py  f_strings.py  for_loops.py  for_while_else.py  functions.py  guessing_game.py  handling_exceptions.py  inheritance.py  inputs.py  itertools_example.py  lambda.py  lists_tuples_sets.py  map_and_filter.py  multi_class_import.py  multiple_choice.py  oop_dog.py  oop_inheritance.py  oop_student.py  password_manager.py  reading_files.py  rock_paper_scissors.py  slots.py  sort_by_key.py  static_methods.py  two_dimensional_lists.py  unpacking.py  useful_tools.py  while_loops.py  writing_appending_files.py  zipping.py
Modules/MiscFiles/: Automobile - Copy.csv  Automobile.csv  MockOutput.xlsx  charlist.csv  check_if_process_exist.py  employees.txt  hyperlinks from MS Edge.txt  key.key  memor_leak_example.py  open_file_in_browser_of_choice.py  passwords.txt  random_data.xlsx  test.csv  test_csv.csv  test_csv2.csv  testing hyperlinks doc.txt  workbook - dickus.xlsx  xl-temp.xlsx
Modules/PythonRepo/: OOP_Student.py  comprehensions.py  dictionaries.py  functions.py  handling_exceptions.py  if_statements.py  lists_and_tuples.py  main.py  mock_data_gen.py  spreadsheet_testing.py  web_browser_testing.py
Textual/: config.toml  main.py  scheduler.py
Textual/revamp/: counter.py
testproject/: pyproject.toml
(+40 files in other folders)
