[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["Kapparina <116474667+Kapparina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
pytest = "^7.2.2"
numpy = "^1.24.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
